# linux-network

./: README.md
ambient-agent/: .containerignore  .env.example  Containerfile  DEPLOYMENT.md  README.md  build-and-test.sh  config.yaml  langgraph.json  pyproject.toml  requirements.txt
ambient-agent/openshift/: 01-configmap.yaml  02-deployment.yaml
ambient-agent/src/: __main__.py  agent.py  config.py  llm_client.py  mcp_client.py  nodes.py  state.py
ambient-agent/tests/: test_config.py  test_graph.py  test_llm.py  test_mcp.py  test_mcp_tools.py
conversational-agent/: README.md  config.yaml  pyproject.toml
conversational-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
conversational-agent/src/: agent.py  mcp_tools.py
conversational-agent/tests/: test_agent.py
